# Dome

./: .gitignore  README.markdown
light_controller/: light_controller.ino
scanner/: CMakeLists.txt  README.md  scan.sh
scanner/include/: bmp.hpp  calibrator.hpp  camera.hpp  config.hpp  drawer.hpp  fbo.hpp  leeds.hpp  main.hpp  mainwindow.h  primitive.hpp  projector_window.hpp  s9gear.hpp  shader.hpp  string_utils.hpp  utils.hpp  uvc_camera.hpp  vbo.hpp
scanner/src/: bmp.cpp  calibrator.cpp  camera.cpp  drawer.cpp  fbo.cpp  leeds.cpp  main.cpp  mainwindow.cpp  primitive.cpp  projector_window.cpp  shader.cpp  utils.cpp  uvc_camera.cpp  vbo.cpp
